--- a/index.html
+++ b/index.html
@@ -20,6 +20,41 @@
         <h1>Sanctuary Helpers</h1>
         <img src="" alt="">
     </header>
+    <section>
+        <div>
+            <h2>Discovering New Materials</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus perferendis minima tenetur, architecto maiores quam cupiditate ipsum, consequuntur dignissimos odit fugiat dolorem eum, eos commodi veritatis dolore odio recusandae necessitatibus!</p>
+            <button><a href="">Find Out More</a></button>
+        </div>
+        <div>
+            <img>
+        </div>
+    </section>
+    <section>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </section>
+    <section>
+        <div>
+            <h2>Customized Offers</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam voluptates cumque totam quisquam amet iste ipsum molestiae atque recusandae perspiciatis.</p>
+        </div>
+        <div>
+            <h2>Community</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi cupiditate officiis veniam! Excepturi illum tempore, asperiores dignissimos totam molestiae ipsum!</p>
+        </div> 
+        <div>
+            <h2>Blog</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusantium adipisci assumenda qui enim incidunt, iure quidem deserunt animi atque!</p>
+        </div>
+        <div>
+            <h2>Get In Touch</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
+        </div>
+    </section>
     
 </body>
 </html>
