added sections and footer

--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
         </div>
     </section>
+    <section>
+        <div><img src="" alt=""></div>
+        <div>
+            <h2>Group Programs</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam molestias iusto unde delectus illum consequuntur harum, rerum est doloribus perferendis.</p>
+            <button><a href="">Read More</a></button>
+        </div>
+        <div>
+            <h2>New Locations</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae sapiente esse distinctio, aperiam iste debitis! Nemo soluta quae culpa.</p>
+            <button><a href="">Read More</a></button>
+        </div>
+        <div><img src="" alt=""></div>
+    </section>
+    <section>
+        <img src="" alt="">
+        <div>
+            <h2>Search by Style</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dignissimos? Ipsam est expedita dolor, optio unde iure amet non distinctio.</p>
+            <button><a href="">Find out more</a></button>
+        </div>
+    </section>
+    <footer>
+        <p>Copyright 2021 Juno College</p>
+    </footer>
     
 </body>
 </html>
