edited button and form elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
             <h2>Discovering New Materials</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus perferendis minima tenetur, architecto maiores quam cupiditate ipsum, consequuntur dignissimos odit fugiat dolorem eum, eos commodi veritatis dolore odio recusandae necessitatibus!</p>
-            <button><a href="">Find Out More</a></button>
+            <p><a href="">Find Out More</a></p>
         </div>
         <div>
             <img>
@@ -60,12 +60,12 @@
         <div>
             <h2>Group Programs</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam molestias iusto unde delectus illum consequuntur harum, rerum est doloribus perferendis.</p>
-            <button><a href="">Read More</a></button>
+            <p><a href="">Read More</a></p>
         </div>
         <div>
             <h2>New Locations</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae sapiente esse distinctio, aperiam iste debitis! Nemo soluta quae culpa.</p>
-            <button><a href="">Read More</a></button>
+            <p><a href="">Read More</a></p>
         </div>
         <div><img src="" alt=""></div>
     </section>
@@ -74,7 +74,7 @@
         <div>
             <h2>Search by Style</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dignissimos? Ipsam est expedita dolor, optio unde iure amet non distinctio.</p>
-            <button><a href="">Find out more</a></button>
+            <p><a href="">Find out more</a></p>
         </div>
     </section>
     <footer>
