--- a/blog.html
+++ b/blog.html
@@ -72,11 +72,11 @@
                 <form>
                     <fieldset>
                         <label for="name" class="sr-only">Name</label>
-                        <input type="text" placeholder="Name" name="name" class="name">
+                        <input type="text" placeholder="Name" id="name" name="name" class="name">
                         <label for="email" class="sr-only">Email Address</label>
-                        <input type="email" placeholder="Email Address" name="email" class="email">
+                        <input type="email" placeholder="Email Address" id="email" name="email" class="email">
                         <label for="comment" class="sr-only">Comment</label>
-                        <textarea name="comment" cols="30" rows="10" placeholder="Comment"></textarea>
+                        <textarea id="comment" name="comment" cols="30" rows="10" placeholder="Comment"></textarea>
                         <button type="submit">Post Comment</button>
                     </fieldset>
                 </form>
