--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
 		<form action="">
 			<fieldset>
 				<label for="name" class="sr-only">Name</label>
-				<input type="text" placeholder="Name" name="name" class="name">
+				<input type="text" placeholder="Name" id="name" name="name" class="name">
 				<label for="email" class="sr-only">Email Address</label>
-				<input type="email" placeholder="Email Address" name="email" class="email">
+				<input type="email" placeholder="Email Address" id="email" name="email" class="email">
 				<label for="message" class="sr-only">Message</label>
-				<textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+				<textarea id="message" name="message" cols="30" rows="10" placeholder="Message"></textarea>
 				<button type="submit">Submit</button>
 			</fieldset>
 		</form>
