--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <div>
-            <img>
+            <img src="./assets/blog-post-image.jpg">
             <div>
                 <h2>Finding The Right Pieces For New Space</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.?</p>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div>
-            <img>
+            <img src="./assets/sidebar-image.jpg" alt="">
             <div>
                 <h3>Our Mission</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati earum amet repudiandae sapiente nulla beatae natus quia esse? In quae hic aliquid magnam pariatur provident non incidunt velit fugiat? Impedit.</p>
@@ -59,14 +59,17 @@
             <h3>Comments</h3>
         </div>
         <div>
-            <img>
+            <img src="./assets/comment-image.jpg">
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, magnam!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, consectetur suscipit. Possimus dolorem fugiat officiis nesciunt ipsam eaque facere eos, iste consequuntur ratione soluta dolorum aspernatur tempora ut eligendi at.</p>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, magnam!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, consectetur suscipit. Possimus dolorem fugiat officiis nesciunt ipsam eaque facere eos, iste consequuntur ratione soluta dolorum aspernatur tempora ut eligendi at.</p>
+                <img src="./assets/comment-image2.jpg" alt="">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, magnam!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, consectetur suscipit. Possimus dolorem fugiat officiis nesciunt ipsam eaque facere eos, iste consequuntur ratione soluta dolorum aspernatur tempora ut eligendi at.</p>
+                </div>
             </div>
             <div>
                 <form>
