--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -18,7 +17,7 @@
             </ul>
         </nav>
         <h1>Sanctuary Helpers</h1>
-        <img src="" alt="">
+        <img src="./assets/header-box.png" alt="">
     </header>
     <section>
         <div>
@@ -27,14 +26,14 @@
             <p><a href="">Find Out More</a></p>
         </div>
         <div>
-            <img>
+            <img src="./assets/small-box.jpg" alt="">
         </div>
     </section>
     <section>
         <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="./assets/gallery-image-1.jpg" alt="">
+            <img src="./assets/gallery-image-2.jpg" alt="">
+            <img src="./assets/gallery-image-3.jpg" alt="">
         </div>
     </section>
     <section>
@@ -56,25 +55,25 @@
         </div>
     </section>
     <section>
-        <div><img src="" alt=""></div>
+        <div><img src="./assets/left-image.jpg" alt=""></div>
         <div>
             <h2>Group Programs</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam molestias iusto unde delectus illum consequuntur harum, rerum est doloribus perferendis.</p>
-            <p><a href="">Read More</a></p>
+            <p><a href="#">Read More</a></p>
         </div>
         <div>
             <h2>New Locations</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae sapiente esse distinctio, aperiam iste debitis! Nemo soluta quae culpa.</p>
-            <p><a href="">Read More</a></p>
+            <p><a href="#">Read More</a></p>
         </div>
-        <div><img src="" alt=""></div>
+        <div><img src="./assets/right-image.jpg" alt=""></div>
     </section>
     <section>
-        <img src="" alt="">
+        <img src="./assets/banner-image.jpg" alt="">
         <div>
             <h2>Search by Style</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dignissimos? Ipsam est expedita dolor, optio unde iure amet non distinctio.</p>
-            <p><a href="">Find out more</a></p>
+            <p><a href="#">Find out more</a></p>
         </div>
     </section>
     <footer>
