--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
 			<h3>Sanctuary Helpers</h3>
 			<nav>
 				<ul>
-					<li><a href="./index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
