--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumar+One+Outline&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bb82a66845.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="styles/style.css">
 	<title>Contact</title>
 </head>
@@ -37,10 +40,10 @@
 		</form>
 		<div>
 			<div>
-				<i></i>
-				<i></i>
-				<i></i>
-				<i></i>
+				<i class="fab fa-facebook-f"></i>
+				<i class="fab fa-instagram"></i>
+				<i class="fab fa-twitter"></i>
+				<i class="fab fa-whatsapp"></i>
 			</div>
 			<div>
 				<p>Lorem ipsum dolor sit amet.</p>
