--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumar+One+Outline&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bb82a66845.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>Project 1</title>
 </head>
@@ -38,18 +41,22 @@
     </section>
     <section>
         <div>
+            <i class=“fas fa-home”></i>
             <h2>Customized Offers</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam voluptates cumque totam quisquam amet iste ipsum molestiae atque recusandae perspiciatis.</p>
         </div>
         <div>
+            <i class=“fas fa-users”></i>
             <h2>Community</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi cupiditate officiis veniam! Excepturi illum tempore, asperiores dignissimos totam molestiae ipsum!</p>
         </div> 
         <div>
+            <i class="fad fa-file"></i>
             <h2>Blog</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusantium adipisci assumenda qui enim incidunt, iure quidem deserunt animi atque!</p>
         </div>
         <div>
+            <i class="fas fa-phone"></i>
             <h2>Get In Touch</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
         </div>
