--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumar+One+Outline&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bb82a66845.js" crossorigin="anonymous"></script>
     <title>Blog</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
