--- a/index.html
+++ b/index.html
@@ -22,45 +22,47 @@
         <h1>Sanctuary Helpers</h1>
         <img src="./assets/header-box.png" alt="">
     </header>
-    <section>
-        <div>
-            <h2>Discovering New Materials</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus perferendis minima tenetur, architecto maiores quam cupiditate ipsum, consequuntur dignissimos odit fugiat dolorem eum, eos commodi veritatis dolore odio recusandae necessitatibus!</p>
-            <p><a href="">Find Out More</a></p>
+        <div class="wrapper">
+            <section>
+                <div>
+                    <h2>Discovering New Materials</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus perferendis minima tenetur, architecto maiores quam cupiditate ipsum, consequuntur dignissimos odit fugiat dolorem eum, eos commodi veritatis dolore odio recusandae necessitatibus!</p>
+                    <p><a href="">Find Out More</a></p>
+                </div>
+                <div>
+                    <img src="./assets/small-box.jpg" alt="">
+                </div>
+            </section>
+            <section>
+                <div>
+                    <img src="./assets/gallery-image-1.jpg" alt="">
+                    <img src="./assets/gallery-image-2.jpg" alt="">
+                    <img src="./assets/gallery-image-3.jpg" alt="">
+                </div>
+            </section>
+            <section>
+                <div>
+                    <i class=“fas fa-home”></i>
+                    <h2>Customized Offers</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam voluptates cumque totam quisquam amet iste ipsum molestiae atque recusandae perspiciatis.</p>
+                </div>
+                <div>
+                    <i class=“fas fa-users”></i>
+                    <h2>Community</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi cupiditate officiis veniam! Excepturi illum tempore, asperiores dignissimos totam molestiae ipsum!</p>
+                </div> 
+                <div>
+                    <i class="fad fa-file"></i>
+                    <h2>Blog</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusantium adipisci assumenda qui enim incidunt, iure quidem deserunt animi atque!</p>
+                </div>
+                <div>
+                    <i class="fas fa-phone"></i>
+                    <h2>Get In Touch</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
+                </div>
+            </section>
         </div>
-        <div>
-            <img src="./assets/small-box.jpg" alt="">
-        </div>
-    </section>
-    <section>
-        <div>
-            <img src="./assets/gallery-image-1.jpg" alt="">
-            <img src="./assets/gallery-image-2.jpg" alt="">
-            <img src="./assets/gallery-image-3.jpg" alt="">
-        </div>
-    </section>
-    <section>
-        <div>
-            <i class=“fas fa-home”></i>
-            <h2>Customized Offers</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam voluptates cumque totam quisquam amet iste ipsum molestiae atque recusandae perspiciatis.</p>
-        </div>
-        <div>
-            <i class=“fas fa-users”></i>
-            <h2>Community</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi cupiditate officiis veniam! Excepturi illum tempore, asperiores dignissimos totam molestiae ipsum!</p>
-        </div> 
-        <div>
-            <i class="fad fa-file"></i>
-            <h2>Blog</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusantium adipisci assumenda qui enim incidunt, iure quidem deserunt animi atque!</p>
-        </div>
-        <div>
-            <i class="fas fa-phone"></i>
-            <h2>Get In Touch</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
-        </div>
-    </section>
     <section>
         <div><img src="./assets/left-image.jpg" alt=""></div>
         <div>
