--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Kumar+One+Outline&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kumar+One&family=Kumar+One+Outline&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bb82a66845.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>Project 1</title>
@@ -23,11 +23,11 @@
         <img src="./assets/header-box.png" alt="">
     </header>
         <div class="wrapper">
-            <section>
-                <div>
+            <section class="discover">
+                <div class="discover-text">
                     <h2>Discovering New Materials</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus perferendis minima tenetur, architecto maiores quam cupiditate ipsum, consequuntur dignissimos odit fugiat dolorem eum, eos commodi veritatis dolore odio recusandae necessitatibus!</p>
-                    <p><a href="">Find Out More</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perferendis placeat delectus ex quae ad quod amet asperiores repellendus, soluta nesciunt. Enim maiores earum, quae quod quis voluptatibus unde magni necessitatibus nam cum eaque? Eaque veniam ex quos rerum ratione atque sequi nostrum ullam cumque eum, assumenda officia odio quis vero a vel? Architecto neque officiis excepturi dolores voluptatem, maiores sed suscipit! Fugiat earum omnis excepturi alias et, odit impedit quidem a nesciunt, quos aliquam nihil, veniam iure perferendis? Est.</p>
+                    <p class="discover-button"><a href="">Find Out More</a></p>
                 </div>
                 <div>
                     <img src="./assets/small-box.jpg" alt="">
