--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <h1>Sanctuary Helpers</h1>
         <img src="./assets/header-box.png" alt="">
     </header>
-        <div class="wrapper">
             <section class="discover">
                 <div class="discover-text">
                     <h2>Discovering New Materials</h2>
@@ -34,10 +33,10 @@
                 </div>
             </section>
             <section>
-                <div>
+                <div class="gallery">
                     <img src="./assets/gallery-image-1.jpg" alt="">
                     <img src="./assets/gallery-image-2.jpg" alt="">
-                    <img src="./assets/gallery-image-3.jpg" alt="">
+                    <img src="./assets/gallery-image-3.jpg" alt="">  
                 </div>
             </section>
             <section>
@@ -62,7 +61,6 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
                 </div>
             </section>
-        </div>
     <section>
         <div><img src="./assets/left-image.jpg" alt=""></div>
         <div>
