--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -39,25 +39,21 @@
                     <img src="./assets/gallery-image-3.jpg" alt="">  
                 </div>
             </section>
-            <section>
+            <section class="about" id="#about">
                 <div>
-                    <i class=“fas fa-home”></i>
-                    <h2>Customized Offers</h2>
+                    <h2 class="customized-offers">Customized Offers</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam voluptates cumque totam quisquam amet iste ipsum molestiae atque recusandae perspiciatis.</p>
                 </div>
                 <div>
-                    <i class=“fas fa-users”></i>
-                    <h2>Community</h2>
+                    <h2 class="community">Community</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi cupiditate officiis veniam! Excepturi illum tempore, asperiores dignissimos totam molestiae ipsum!</p>
                 </div> 
                 <div>
-                    <i class="fad fa-file"></i>
-                    <h2>Blog</h2>
+                    <h2 class="blog">Blog</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos accusantium adipisci assumenda qui enim incidunt, iure quidem deserunt animi atque!</p>
                 </div>
                 <div>
-                    <i class="fas fa-phone"></i>
-                    <h2>Get In Touch</h2>
+                    <h2 class="get-in-touch">Get In Touch</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
                 </div>
             </section>
