--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="discover-text">
                     <h2>Discovering New Materials</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perferendis placeat delectus ex quae ad quod amet asperiores repellendus, soluta nesciunt. Enim maiores earum, quae quod quis voluptatibus unde magni necessitatibus nam cum eaque? Eaque veniam ex quos rerum ratione atque sequi nostrum ullam cumque eum, assumenda officia odio quis vero a vel? Architecto neque officiis excepturi dolores voluptatem, maiores sed suscipit! Fugiat earum omnis excepturi alias et, odit impedit quidem a nesciunt, quos aliquam nihil, veniam iure perferendis? Est.</p>
-                    <p class="discover-button"><a href="">Find Out More</a></p>
+                    <p class="button"><a href="">Find Out More</a></p>
                 </div>
                 <div>
                     <img src="./assets/small-box.jpg" alt="">
@@ -57,19 +57,21 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci harum a quaerat sequi aperiam reprehenderit sed aut laborum consectetur. Repudiandae.</p>
                 </div>
             </section>
-    <section>
-        <div><img src="./assets/left-image.jpg" alt=""></div>
+    <section class="learn-more">
+        <div>
+            <img src="./assets/left-image.jpg" class="left-image" alt="">
+        </div>
         <div>
             <h2>Group Programs</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam molestias iusto unde delectus illum consequuntur harum, rerum est doloribus perferendis.</p>
-            <p><a href="#">Read More</a></p>
+            <p class="button"><a href="#">Read More</a></p>
         </div>
-        <div>
+        <div class="location">
             <h2>New Locations</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae sapiente esse distinctio, aperiam iste debitis! Nemo soluta quae culpa.</p>
-            <p><a href="#">Read More</a></p>
+            <p class="location-button button"><a href="#">Read More</a></p>
         </div>
-        <div><img src="./assets/right-image.jpg" alt=""></div>
+        <div><img src="./assets/right-image.jpg" class="right-image" alt=""></div>
     </section>
     <section>
         <img src="./assets/banner-image.jpg" alt="">
