styles and fixes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div>
             <img src="./assets/left-image.jpg" class="left-image" alt="">
         </div>
-        <div>
+        <div class="programs">
             <h2>Group Programs</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam molestias iusto unde delectus illum consequuntur harum, rerum est doloribus perferendis.</p>
             <p class="button"><a href="#">Read More</a></p>
@@ -73,12 +73,12 @@
         </div>
         <div><img src="./assets/right-image.jpg" class="right-image" alt=""></div>
     </section>
-    <section>
+    <section class="style">
         <img src="./assets/banner-image.jpg" alt="">
-        <div>
+        <div class="search">
             <h2>Search by Style</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dignissimos? Ipsam est expedita dolor, optio unde iure amet non distinctio.</p>
-            <p><a href="#">Find out more</a></p>
+            <p class="style-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, ab inventore placeat nostrum voluptates sit labore odio enim minima facilis temporibus totam, fugit a eligendi culpa. Facilis, blanditiis quae. Repellendus laboriosam, dolor fuga nostrum rem voluptatum nihil blanditiis deserunt accusantium reiciendis tempora harum quaerat nobis vel assumenda consectetur nemo iure repudiandae officia nulla dignissimos officiis beatae debitis similique.</p>
+            <p class="button"><a href="#">Find out more</a></p>
         </div>
     </section>
     <footer>
