--- a/blog.html
+++ b/blog.html
@@ -11,50 +11,57 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="blog-header">
         <div>
-            <h3>Sanctuary Helpers</h3>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
+        <h3 class="header-logo">Sanctuary Helpers</h3>
+        </div>
+		<div>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+				</ul>
+			</nav>
+		</div>
         <h1>Blog</h1>
     </header>
-    <section>
-        <div>
-            <img src="./assets/blog-post-image.jpg">
-            <div>
+    <section class="blog-content">
+        <div class="blog-content-container">
+            <div class="left-content">
+                <div class="left-image-container">
+                    <img src="./assets/blog-post-image.jpg">
+                </div>
+                <div class="left-content-text">
                 <h2>Finding The Right Pieces For New Space</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In officia qui, ipsa consequuntur cumque iure error, repudiandae, sequi amet veniam delectus sapiente explicabo assumenda quas architecto distinctio cupiditate. Molestiae minima est dolore, a suscipit numquam tempora explicabo temporibus accusamus doloribus aspernatur vitae possimus beatae veritatis tempore aliquid, nihil saepe assumenda quod? Officiis, quas ducimus obcaecati modi tenetur eum excepturi architecto?Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                <p class="content-date">Monday, October 5th, 2019 by <span>Saron</span></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat nostrum exercitationem sit officia recusandae atque incidunt aperiam facilis, quibusdam dicta nemo fugit omnis enim dignissimos cumque? Aspernatur dolorum provident vero impedit ea sit voluptatem explicabo.</p>
 
-                In officia qui, ipsa consequuntur cumque iure error, repudiandae, sequi amet veniam delectus sapiente explicabo assumenda quas architecto distinctio cupiditate. Molestiae minima est dolore, a suscipit numquam tempora explicabo temporibus accusamus doloribus aspernatur vitae possimus beatae veritatis tempore aliquid, nihil saepe assumenda quod? Officiis, quas ducimus obcaecati modi tenetur eum excepturi architecto?
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos perferendis deserunt aut, soluta id obcaecati! Quasi veritatis libero ut veniam quidem sequi numquam itaque, adipisci rem, vero non perferendis, doloribus dolore! Hic commodi repellat ipsum laboriosam dignissimos ut, vel numquam, officiis debitis ratione odit quasi ex molestiae.</p>
 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. In officia qui, ipsa consequuntur cumque iure error, repudiandae, sequi amet veniam delectus sapiente explicabo assumenda quas architecto distinctio cupiditate. Molestiae minima est dolore, a suscipit numquam tempora explicabo temporibus accusamus doloribus aspernatur vitae possimus beatae veritatis tempore aliquid, nihil saepe assumenda quod? Officiis, quas ducimus obcaecati modi tenetur eum excepturi architecto?Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium a adipisci unde blanditiis dolorum debitis aliquam at, magni nobis, mollitia eligendi facere. Impedit asperiores, repellendus unde labore officiis accusantium aspernatur nihil illo, tenetur quidem in esse nostrum vero laborum eveniet fugit! Reprehenderit velit vel, illum exercitationem qui cumque quia et ratione laudantium labore? Asperiores assumenda aspernatur totam facere corrupti corporis quos fugiat laborum, amet voluptas ratione necessitatibus earum, possimus, distinctio labore doloremque nemo? Magni mollitia quam cupiditate autem illum tempore?</p>
 
-                In officia qui, ipsa consequuntur cumque iure error, repudiandae, sequi amet veniam delectus sapiente explicabo assumenda quas architecto distinctio cupiditate. Molestiae minima est dolore, a suscipit numquam tempora explicabo temporibus accusamus doloribus aspernatur vitae possimus beatae veritatis tempore aliquid, nihil saepe assumenda quod? Officiis, quas ducimus obcaecati modi tenetur eum excepturi architecto?Lorem ipsum dolor sit amet, consectetur adipisicing elit. In officia qui, ipsa consequuntur cumque iure error, repudiandae, sequi amet veniam delectus sapiente explicabo assumenda quas architecto distinctio cupiditate. Molestiae minima est dolore, a suscipit numquam tempora explicabo temporibus accusamus doloribus aspernatur vitae possimus beatae veritatis tempore aliquid, nihil saepe assumenda quod? Officiis, quas ducimus obcaecati modi tenetur eum excepturi architecto?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quisquam placeat eveniet maiores repudiandae laudantium perferendis id quod atque necessitatibus, dolorem ipsam optio.</p>
             </div>
-        </div>
-        <div>
+            </div>
+        
+        <div class="right-content">
+            <div class="right-image-container">
             <img src="./assets/sidebar-image.jpg" alt="">
-            <div>
-                <h3>Our Mission</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati earum amet repudiandae sapiente nulla beatae natus quia esse? In quae hic aliquid magnam pariatur provident non incidunt velit fugiat? Impedit.</p>
             </div>
-            <div>
+            <div class="right-content-text">
+                <h3>Our Mission</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde corrupti nisi vitae quibusdam necessitatibus sequi!</p>
                 <h3>Recent Post</h3>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                    <li>Asperiores dolor quod minima voluptate, quaerat ratione enim provident deleniti modi.</li>
-                    <li>Esse repellendus quis corporis fuga repellat laudantium laborum incidunt quasi aliquam.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, inventore?</li>
+                    <li>Lorem ipsum dolor sit.</li>
+                    <li>Veniam recusandae cumque amet.</li>
+                    <li>Voluptas iusto ipsam maiores!</li>
+                    <li>Ipsum numquam saepe quidem.</li>
                 </ul>
             </div>
+        </div>
         </div>
     </section>
     <section>
