--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-	<header>
+	<header class="contact-header">
+		<h3>Sanctuary Helpers</h3>
 		<div>
-			<h3>Sanctuary Helpers</h3>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
