--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html#about">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -39,7 +39,7 @@
                     <img src="./assets/gallery-image-3.jpg" alt="">  
                 </div>
             </section>
-            <section class="about" id="#about">
+            <section class="about" id="about">
                 <div>
                     <h2 class="customized-offers">Customized Offers</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam voluptates cumque totam quisquam amet iste ipsum molestiae atque recusandae perspiciatis.</p>
