contact form mobile

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 <body>
     <header class="blog-header">
         <div>
-            <h3 class="header-logo">Sanctuary Helpers</h3>
+            <p class="header-logo">Sanctuary Helpers</p>
         </div>
         <div>
             <nav>
