--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <body>
 	<header class="contact-header">
-		<h3 class="header-logo">Sanctuary Helpers</h3>
+		<p class="header-logo">Sanctuary Helpers</p>
 		<div>
 			<nav>
 				<ul>
