--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
         <div class="blog-content-container">
             <div class="left-content">
                 <div class="left-image-container">
-                    <img src="./assets/blog-post-image.jpg">
+                    <img src="./assets/blog-post-image.jpg" alt="living space with a wide comfy chair">
                 </div>
                 <div class="left-content-text">
                     <h2>Finding The Right Pieces For New Space</h2>
@@ -64,7 +64,7 @@
 
             <div class="right-content">
                 <div class="right-image-container">
-                    <img src="./assets/sidebar-image.jpg" alt="">
+                    <img src="./assets/sidebar-image.jpg" alt="a modern light fixture">
                 </div>
                 <div class="right-content-text">
                     <h3>Our Mission</h3>
@@ -89,7 +89,7 @@
             <div class="comment-section-container">
                 <div class="comment-flex">
                     <div>
-                        <img src="./assets/comment-image.jpg">
+                        <img src="./assets/comment-image.jpg" alt="guest comment image">
                     </div>
                     <div class="comment-text">
                         <p>Tuesday October 9th, 2019 by Davin</p>
@@ -99,7 +99,7 @@
                 <div class="comment-section-container">
                     <div class="comment-flex">
                         <div>
-                            <img src="./assets/comment-image2.jpg" alt="">
+                            <img src="./assets/comment-image2.jpg" alt="guest comment image">
                         </div>
                         <div class="comment-text">
                             <p>Wednesday October 10th, 2019 by Lisa</p>
