--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
             </ul>
         </nav>
         <h1>Sanctuary Helpers</h1>
-        <img src="./assets/header-box.png" alt="">
+        <img src="./assets/header-box.png" alt="2 blue velvet chairs">
     </header>
             <section class="discover">
                 <div class="discover-text">
                     <h2>Discovering New Materials</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perferendis placeat delectus ex quae ad quod amet asperiores repellendus, soluta nesciunt. Enim maiores earum, quae quod quis voluptatibus unde magni necessitatibus nam cum eaque? Eaque veniam ex quos rerum ratione atque sequi nostrum ullam cumque eum, assumenda officia odio quis vero a vel? Architecto neque officiis excepturi dolores voluptatem, maiores sed suscipit! Fugiat earum omnis excepturi alias et, odit impedit quidem a nesciunt, quos aliquam nihil, veniam iure perferendis? Est.</p>
-                    <p class="button"><a href="">Find Out More</a></p>
+                    <p class="button"><a href="#">Find Out More</a></p>
                 </div>
                 <div>
-                    <img src="./assets/small-box.jpg" alt="">
+                    <img src="./assets/small-box.jpg" alt="a living space centered around a couch">
                 </div>
             </section>
             <section>
                 <div class="gallery">
-                    <img src="./assets/gallery-image-1.jpg" alt="">
-                    <img src="./assets/gallery-image-2.jpg" alt="">
-                    <img src="./assets/gallery-image-3.jpg" alt="">  
+                    <img src="./assets/gallery-image-1.jpg" alt="brown vase on top of a green dresser">
+                    <img src="./assets/gallery-image-2.jpg" alt="a living space with a tan couch and decorative pillows">
+                    <img src="./assets/gallery-image-3.jpg" alt="a wired round chair">  
                 </div>
             </section>
             <section class="about" id="about">
@@ -59,7 +59,7 @@
             </section>
     <section class="learn-more">
         <div>
-            <img src="./assets/left-image.jpg" class="left-image" alt="">
+            <img src="./assets/left-image.jpg" class="left-image" alt="a bonzai tree sitting on a table with 2 white chairs">
         </div>
         <div class="programs">
             <h2>Group Programs</h2>
@@ -71,10 +71,10 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi molestiae sapiente esse distinctio, aperiam iste debitis! Nemo soluta quae culpa.</p>
             <p class="location-button button"><a href="#">Read More</a></p>
         </div>
-        <div><img src="./assets/right-image.jpg" class="right-image" alt=""></div>
+        <div><img src="./assets/right-image.jpg" class="right-image" alt="poolside view with 2 brown wicker chairs"></div>
     </section>
     <section class="style">
-        <img src="./assets/banner-image.jpg" alt="">
+        <img src="./assets/banner-image.jpg" alt="a living space centered a brown leather sofa with 2 blush chairs on either side">
         <div class="search">
             <h2>Search by Style</h2>
             <p class="style-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, ab inventore placeat nostrum voluptates sit labore odio enim minima facilis temporibus totam, fugit a eligendi culpa. Facilis, blanditiis quae. Repellendus laboriosam, dolor fuga nostrum rem voluptatum nihil blanditiis deserunt accusantium reiciendis tempora harum quaerat nobis vel assumenda consectetur nemo iure repudiandae officia nulla dignissimos officiis beatae debitis similique.</p>
