--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,10 @@
         </div>
         <div>
             <nav>
-                <ul>
+                <div class="hamburger-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -126,6 +129,8 @@
     <footer class="blog-footer">
         <p>Copyright 2021 Juno College</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
