--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,16 @@
 		<p class="header-logo">Sanctuary Helpers</p>
 		<div>
 			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html#about">About</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
+                <div class="hamburger-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <ul class="nav-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
 		</div>
 		<h1>Get In Touch</h1>
 	</header>
@@ -60,6 +63,8 @@
 	<footer class="blog-footer">
 		<p>Copyright 2021 Juno College</p>
 	</footer>
+
+	<script src="script.js"></script>
 
 </body>
 
