--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="menu-container">
+            <nav>
+                <div class="hamburger-menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <ul class="nav-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
         <h1>Sanctuary Helpers</h1>
         <img src="./assets/header-box.png" alt="2 blue velvet chairs">
     </header>
@@ -84,6 +89,8 @@
     <footer>
         <p>Copyright 2021 Juno College</p>
     </footer>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
