added js file and scripts tag to html

--- a/blog.html
+++ b/blog.html
@@ -126,6 +126,8 @@
     <footer class="blog-footer">
         <p>Copyright 2021 Juno College</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 
 </html>
